[package]
name = "undefspace-tg-bot"
version = "0.1.0"
authors = ["Vladimir Serov <me@cab404.ru>"]
edition = "2021"
description = "A simple doorkeeper for undefspace"
repository = "https://github.com/undefspace/tg-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = "1.0"
once_cell = "1.19.0"
http = "1.0.0"
envy = "0.4.2"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-forest = "0.1.6"
eyre = "0.6.12"
http-serde-ext = "1.0.2"
color-eyre = "0.6.2"
serde_json = "1.0.114"
chrono = { version = "0.4.34", features = ["serde"] }
bstr = "1.9.1"

[dependencies.teloxide]
version = "0.12.2"
features = ["macros", "rustls", "ctrlc_handler"]
default-features = false

[dependencies.reqwest]
version = "0.11.3"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread", "tracing"]
default-features = false


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
allow_attributes = "warn"
arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
float_arithmetic = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
integer_division = "warn"
iter_over_hash_type = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
mixed_read_write_in_expression = "warn"
modulo_arithmetic = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
panic_in_result_fn = "warn"
pattern_type_mismatch = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
